Most klizni sistemi cruds done

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://postgres:opatovo10@localhost:5432/europrofil?schema=public"
+
+# postgres://PavaoZornija1:@ep-steep-poetry-48615223.us-east-2.aws.neon.tech/neondb
